Update portfolio with new projects and layouts
- Add Noteable project to Prototypes section
- Reorganize prototypes layout to 3-column grid
- Replace Mobile App project with Smart Workspace Hub
- Update card layouts and styling

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -174,31 +174,43 @@
   
           <!-- Prototypes Tab -->
           <div class="tab-pane fade" id="prototypes" role="tabpanel" aria-labelledby="prototypes-tab">
-              <div class="row mb-2 mt-2">
-                  <!-- PVT Project -->
-                  <div class="col-md-6" data-aos="fade-up">
-                      <div class="card h-100 border rounded overflow-hidden mb-4 shadow-sm position-relative">
-                          <div class="card-body p-4 d-flex flex-column">
-                              <strong class="d-inline-block mb-2 text-success-emphasis">MVP Development</strong>
-                              <h3 class="mb-0">Psychomotor Vigilance Test</h3>
-                              <p class="mb-auto">Built as part of fatigue management initiative. Features real-time analytics and performance tracking.</p>
-                              <a href="../Games/PVT/" class="icon-link gap-1 icon-link-hover stretched-link">View Project</a>
-                          </div>
-                      </div>
-                  </div>
-  
-                  <!-- Pixie Game -->
-                  <div class="col-md-6" data-aos="fade-up">
-                      <div class="card h-100 border rounded overflow-hidden mb-4 shadow-sm position-relative">
-                          <div class="card-body p-4 d-flex flex-column">
-                              <strong class="d-inline-block mb-2 text-success-emphasis">Technical Prototype</strong>
-                              <h3 class="mb-0">Pixie: Web Game</h3>
-                              <p class="mb-auto">Developed to demonstrate full-stack capabilities and user engagement mechanics.</p>
-                              <a href="../Games/Pixie/" class="icon-link gap-1 icon-link-hover stretched-link">View Project</a>
-                          </div>
-                      </div>
-                  </div>
-              </div>
+            <div class="row mb-2 mt-2">
+                <!-- Noteable Project -->
+                <div class="col-md-4" data-aos="fade-up">
+                    <div class="card h-100 border rounded overflow-hidden mb-4 shadow-sm position-relative">
+                        <div class="card-body p-4 d-flex flex-column">
+                            <strong class="d-inline-block mb-2 text-success-emphasis">Product Redesign</strong>
+                            <h3 class="mb-0">Noteable</h3>
+                            <p class="mb-auto">A reimagined note-taking application based on Google Keep teardown. Features enhanced collaboration and organization tools.</p>
+                            <a href="https://bucolic-torrone-e17f82.netlify.app/" class="icon-link gap-1 icon-link-hover stretched-link">View Prototype</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- PVT Project -->
+                <div class="col-md-4" data-aos="fade-up">
+                    <div class="card h-100 border rounded overflow-hidden mb-4 shadow-sm position-relative">
+                        <div class="card-body p-4 d-flex flex-column">
+                            <strong class="d-inline-block mb-2 text-success-emphasis">MVP Development</strong>
+                            <h3 class="mb-0">Psychomotor Vigilance Test</h3>
+                            <p class="mb-auto">Built as part of fatigue management initiative. Features real-time analytics and performance tracking.</p>
+                            <a href="../Games/PVT/" class="icon-link gap-1 icon-link-hover stretched-link">View Project</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Pixie Game -->
+                <div class="col-md-4" data-aos="fade-up">
+                    <div class="card h-100 border rounded overflow-hidden mb-4 shadow-sm position-relative">
+                        <div class="card-body p-4 d-flex flex-column">
+                            <strong class="d-inline-block mb-2 text-success-emphasis">Technical Prototype</strong>
+                            <h3 class="mb-0">Pixie: Web Game</h3>
+                            <p class="mb-auto">Developed to demonstrate full-stack capabilities and user engagement mechanics.</p>
+                            <a href="../Games/Pixie/" class="icon-link gap-1 icon-link-hover stretched-link">View Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
           </div>
       </div>
   
@@ -228,16 +240,16 @@
                   </div>
               </div>
   
-              <!-- Mobile App Redesign -->
-              <div class="col-md-4">
-                  <div class="card h-100 border-dashed">
-                      <div class="card-body">
-                          <h5>Mobile App Redesign Project</h5>
-                          <p>End-to-end redesign case study including user research, wireframes, and implementation strategy.</p>
-                          <span class="badge bg-secondary">Planned</span>
-                      </div>
-                  </div>
-              </div>
+<!-- Collaborative Workspace -->
+<div class="col-md-4">
+    <div class="card h-100 border-dashed">
+        <div class="card-body">
+            <h5>Smart Workspace Hub</h5>
+            <p>An AI-enhanced collaborative workspace that integrates note-taking, task management, and knowledge sharing with smart context awareness.</p>
+            <span class="badge bg-secondary">Planned</span>
+        </div>
+    </div>
+</div>
           </div>
       </div>
   
