--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
         <div class="edu">
           <div class="p-1 text-center bg-body-tertiary rounded-3" data-aos="fade-up">
               <h2 class="text-body-emphasis">Educational Journey</h2>
-              <p class="lead mb-4">Building a foundation of leadership, innovation, and technical excellence</p>
-          </div>
+            </div>
           
           <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel" data-aos="fade-up">
               <div class="carousel-indicators">
@@ -231,10 +230,10 @@
                   <div class="carousel-item active">
                       <img src="./Assets/Images/SPJIMR campus.jpeg" class="d-block w-100 carousel-img" alt="SPJIMR Campus">
                       <div class="carousel-caption d-block">
-                          <div class="bg-dark bg-opacity-75 p-2 p-md-3 rounded">
-                              <h3 class="fs-4 fs-md-3">Post Graduate Programme in Management (PGPM) - 2022</h3>
-                              <h4 class="fs-5 fs-md-4">S.P. Jain Institute of Management & Research, Mumbai</h4>
-                              <p class="mb-2 small">Full time Executive MBA focused on Product Strategy</p>
+                          <div class="bg-dark bg-opacity-75 p-2 rounded">
+                              <h3 class="fs-6 fs-sm-5 fs-md-4">Post Graduate Programme in Management (PGPM) - 2022</h3>
+                              <h4 class="fs-7 fs-sm-6 fs-md-5">S.P. Jain Institute of Management & Research, Mumbai</h4>
+                              <p class="mb-1 mb-md-2 small d-none d-sm-block">Full time Executive MBA focused on Product Strategy</p>
                           </div>
                       </div>
                   </div>
@@ -243,10 +242,10 @@
                   <div class="carousel-item">
                       <img src="./Assets/Images/CIT coimbatore.jpeg" class="d-block w-100 carousel-img" alt="CIT Coimbatore Campus">
                       <div class="carousel-caption d-block">
-                          <div class="bg-dark bg-opacity-75 p-2 p-md-3 rounded">
-                              <h3 class="fs-4 fs-md-3">Bachelor of Engineering - 2014</h3>
-                              <h4 class="fs-5 fs-md-4">Coimbatore Institute of Technology</h4>
-                              <p class="mb-2 small">Mechanical Engineering with focus on Product Design</p>
+                          <div class="bg-dark bg-opacity-75 p-2 rounded">
+                              <h3 class="fs-6 fs-sm-5 fs-md-4">Bachelor of Engineering - 2014</h3>
+                              <h4 class="fs-7 fs-sm-6 fs-md-5">Coimbatore Institute of Technology</h4>
+                              <p class="mb-1 mb-md-2 small d-none d-sm-block">Mechanical Engineering with focus on Product Design</p>
                           </div>
                       </div>
                   </div>
@@ -255,10 +254,10 @@
                   <div class="carousel-item">
                       <img src="./Assets/Images/school-main-image.jpg" class="d-block w-100 carousel-img" alt="ICI Campus">
                       <div class="carousel-caption d-block">
-                          <div class="bg-dark bg-opacity-75 p-2 p-md-3 rounded">
-                              <h3 class="fs-4 fs-md-3">Higher Secondary Education</h3>
-                              <h4 class="fs-5 fs-md-4">I.C.I.Govt. Boys. Hr. Sec. School, Tenkasi</h4>
-                              <p class="mb-2 small">Specialized in Sciences & Mathematics</p>
+                          <div class="bg-dark bg-opacity-75 p-2 rounded">
+                              <h3 class="fs-6 fs-sm-5 fs-md-4">Higher Secondary Education</h3>
+                              <h4 class="fs-7 fs-sm-6 fs-md-5">I.C.I.Govt. Boys. Hr. Sec. School, Tenkasi</h4>
+                              <p class="mb-1 mb-md-2 small d-none d-sm-block">Specialized in Sciences & Mathematics</p>
                           </div>
                       </div>
                   </div>
